// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<RadioGroup /> should render as row 1`] = `
.c0 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: baseline;
  -webkit-box-align: baseline;
  -ms-flex-align: baseline;
  align-items: baseline;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  padding: 0.6rem;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
}

.c1 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  cursor: pointer;
  padding: 0.6rem;
}

.c1 > input {
  border: 0;
  -webkit-clip: rect(0 0 0 0);
  clip: rect(0 0 0 0);
  -webkit-clip-path: inset(50%);
  clip-path: inset(50%);
  height: 1px;
  margin: -1px;
  overflow: hidden;
  padding: 0;
  position: absolute;
  white-space: nowrap;
  width: 1px;
}

.c3 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  width: 1.6rem;
  height: 1.6rem;
  margin-right: 1.2rem;
  border: 1px solid hsl(207,22%,90%);
  border-radius: 50%;
  background: linear-gradient( 0deg,hsl(240,33%,99%) 0%,hsl(0,100%,100%) 100% );
  box-shadow: inset 0 2px 0 0 hsla(0,100%,100%,0.05),0 1px 1px 0 hsl(240,33%,99%);
  -webkit-transition: background-color ease 0.25s;
  transition: background-color ease 0.25s;
}

.c3.checked {
  border: 1px solid #1873a0;
  background: hsl(200,74%,46%) linear-gradient( 0deg,hsla(0,100%,100%,0) 0%,hsla(0,100%,100%,0.1) 100% );
  box-shadow: inset 0 0.2rem 0 0 hsla(0,100%,100%,0.1);
  -webkit-transition: border ease 0.25s;
  transition: border ease 0.25s;
  position: relative;
}

.c3.checked:after {
  content: '';
  position: absolute;
  left: 50%;
  top: 50%;
  width: 0.6rem;
  height: 0.6rem;
  -webkit-transform: translate3d(-50%,-50%,0);
  -ms-transform: translate3d(-50%,-50%,0);
  transform: translate3d(-50%,-50%,0);
  background-color: hsl(0,100%,100%);
  border-radius: 50%;
}

.c2 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  cursor: pointer;
  position: relative;
  color: hsl(207,13%,45%);
}

<div
  class="c0"
>
  <div
    class="c1"
  >
    <label
      class="c2"
    >
      <input
        id="artichoke"
        name="vegetable"
        type="radio"
        value="artichoke"
      />
      <div
        class="c3"
        data-testid="styled-radio"
      />
      artichoke
    </label>
  </div>
  <div
    class="c1"
  >
    <label
      class="c2"
    >
      <input
        id="beetroot"
        name="vegetable"
        type="radio"
        value="beetroot"
      />
      <div
        class="c3"
        data-testid="styled-radio"
      />
      beetroot
    </label>
  </div>
  <div
    class="c1"
  >
    <label
      class="c2"
    >
      <input
        id="pumpkin"
        name="vegetable"
        type="radio"
        value="pumpkin"
      />
      <div
        class="c3"
        data-testid="styled-radio"
      />
      pumpkin
    </label>
  </div>
</div>
`;

exports[`<RadioGroup /> should render without a problem 1`] = `
.c0 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: baseline;
  -webkit-box-align: baseline;
  -ms-flex-align: baseline;
  align-items: baseline;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  padding: 0.6rem;
}

.c1 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  cursor: pointer;
  padding: 0.6rem;
}

.c1 > input {
  border: 0;
  -webkit-clip: rect(0 0 0 0);
  clip: rect(0 0 0 0);
  -webkit-clip-path: inset(50%);
  clip-path: inset(50%);
  height: 1px;
  margin: -1px;
  overflow: hidden;
  padding: 0;
  position: absolute;
  white-space: nowrap;
  width: 1px;
}

.c3 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  width: 1.6rem;
  height: 1.6rem;
  margin-right: 1.2rem;
  border: 1px solid hsl(207,22%,90%);
  border-radius: 50%;
  background: linear-gradient( 0deg,hsl(240,33%,99%) 0%,hsl(0,100%,100%) 100% );
  box-shadow: inset 0 2px 0 0 hsla(0,100%,100%,0.05),0 1px 1px 0 hsl(240,33%,99%);
  -webkit-transition: background-color ease 0.25s;
  transition: background-color ease 0.25s;
}

.c3.checked {
  border: 1px solid #1873a0;
  background: hsl(200,74%,46%) linear-gradient( 0deg,hsla(0,100%,100%,0) 0%,hsla(0,100%,100%,0.1) 100% );
  box-shadow: inset 0 0.2rem 0 0 hsla(0,100%,100%,0.1);
  -webkit-transition: border ease 0.25s;
  transition: border ease 0.25s;
  position: relative;
}

.c3.checked:after {
  content: '';
  position: absolute;
  left: 50%;
  top: 50%;
  width: 0.6rem;
  height: 0.6rem;
  -webkit-transform: translate3d(-50%,-50%,0);
  -ms-transform: translate3d(-50%,-50%,0);
  transform: translate3d(-50%,-50%,0);
  background-color: hsl(0,100%,100%);
  border-radius: 50%;
}

.c2 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  cursor: pointer;
  position: relative;
  color: hsl(207,13%,45%);
}

<div
  class="c0"
>
  <div
    class="c1"
  >
    <label
      class="c2"
    >
      <input
        id="artichoke"
        name="vegetable"
        type="radio"
        value="artichoke"
      />
      <div
        class="c3"
        data-testid="styled-radio"
      />
      artichoke
    </label>
  </div>
  <div
    class="c1"
  >
    <label
      class="c2"
    >
      <input
        id="beetroot"
        name="vegetable"
        type="radio"
        value="beetroot"
      />
      <div
        class="c3"
        data-testid="styled-radio"
      />
      beetroot
    </label>
  </div>
  <div
    class="c1"
  >
    <label
      class="c2"
    >
      <input
        id="pumpkin"
        name="vegetable"
        type="radio"
        value="pumpkin"
      />
      <div
        class="c3"
        data-testid="styled-radio"
      />
      pumpkin
    </label>
  </div>
</div>
`;
